# websearch

./: .coverage  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/hooks/: emotion-failure-monitor.sh  emotion-safety-check.sh  emotion-session-init.sh  emotion-success-monitor.sh  hooks.json
.github/workflows/: build.yml  lint.yml  release.yml  test.yml  typecheck.yml
docs/: CLI.md  PROJECT.md
docs/features/: agent-integration.md  agent-processing.md  cache.md  command-reference.md  converter.md  fetcher.md  sdk.md
reports/: agent-autonomy-analysis.md  configuration-file-implementation.md  date-range-filtering-implementation.md  domain-filtering-implementation.md  multiple-output-formats-implementation.md  product-feature-ideas.md  senior-architecture-review.md  source-citation-implementation.md  streaming-response-implementation.md
reports/claude-agent-sdk-python/: ADVANCED_PATTERNS.md  AGENT_ARCHITECTURE.md  API_CLIENT_ANALYSIS.md  BYOK_CONFIGURATION.md  CACHING_MECHANISMS.md  CLI_IMPLEMENTATION.md  MESSAGE_HANDLING.md  PROJECT_STRUCTURE.md  STREAMING_PATTERNS.md  TOOLS_MCP_INTEGRATION.md
tests/: test_cache.py  test_converter.py  test_fetcher.py  test_maybe.py  test_result.py  test_search.py
websearch/: __main__.py  main.py
websearch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
websearch/core/: fetcher.py
websearch/core/agent/: __init__.py  claude_client.py  errors.py  response_cache.py
websearch/core/cache/: __init__.py  cache.py  key.py  storage.py  ttl.py
websearch/core/converter/: __init__.py  converter.py  encoding.py  security.py
websearch/core/fetcher/: __init__.py  backoff.py  detection.py  errors.py  fetcher.py
websearch/core/search/: __init__.py  client.py  search.py  types.py
websearch/core/types/: maybe.py  result.py
