[project]
name = "websearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.25",
    "selectolax>=0.3",
    "markdownify>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest"]
spa = ["playwright>=1.40"]

[project.scripts]
websearch = "websearch.main:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
