[project]
name = "websearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.25",
    "selectolax>=0.3",
    "markdownify>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
spa = ["playwright>=1.40"]

[project.scripts]
websearch = "websearch.main:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_return_any = false
warn_unused_ignores = false
explicit_package_bases = true
ignore_missing_imports = true
ignore_errors = true

